--- a/AnotherWebProgFinals/WebAdminMaster.Master
+++ b/AnotherWebProgFinals/WebAdminMaster.Master
@@ -53,7 +53,7 @@
                                     <ul id="profile-dropdown" class="dropdown-content" style="color: green">
                                         <li><a href="#"><i class="mdi-action-lock-outline"></i>Lock</a>
                                         </li>
-                                        <li><a href="#"><i class="mdi-hardware-keyboard-tab"></i>Logout</a>
+                                        <li><a href="../admin_login.aspx"><i class="mdi-hardware-keyboard-tab"></i>Logout</a>
                                         </li>
                                     </ul>
                                     <a class="btn-flat dropdown-button waves-effect waves-light white-text profile-btn" href="#" data-activates="profile-dropdown">
@@ -88,7 +88,7 @@
 
 
 
-        
+
 
         <footer class="page-footer" style="background: url(../images/headd.jpg)">
             <div class="container">
